# Ark

./: .bazelrc  .gitignore  Doxyfile  README.md  WORKSPACE
Ark/: Ark.h  BUILD  CMakeLists.txt
Ark/Hal/: BUILD  Hal.h
Ark/Hal/Simd/: Avx.h  Avx2.h  Neon.h  Neon32.h  Neon64.h  Simd.h  Sse.h  Sse2.h  Sse3.h  Sse4.h  Wasm128.h
Ark/Math/: BUILD  Concepts.h  Matrix.h  Mtx.h  Quat.h  Quat_Avx.h  Quat_Avx2.h  Quat_Neon.h  Quat_Neon32.h  Quat_Neon64.h  Quat_Sse.h  Quat_Sse2.h  Quat_Sse3.h  Quat_Sse4.h  Quat_Wasm128.h  Quaternion.h  Vec.h  Vec_Avx.h  Vec_Avx2.h  Vec_Sse.h  Vec_Sse2.h  Vec_Sse3.h  Vec_Sse4.h  Vector.h
Ark/Math/SSE/: Quat_SSE.h  Quaternion_SSE.h
Ark/Tests/: BUILD  CMakeLists.txt  Cfg.h  MatrixUnitTests.cpp  Mtx4x4UnitTests.cpp  Mtx4x4UnitTests.h  MtxUnitTests.cpp  QuatAvx2UnitTests.cpp  QuatAvxUnitTests.cpp  QuatNeon32UnitTests.cpp  QuatNeon64UnitTests.cpp  QuatSse2UnitTests.cpp  QuatSse3UnitTests.cpp  QuatSse4UnitTests.cpp  QuatSseUnitTests.cpp  QuatUnitTests.cpp  QuatUnitTests.h  QuatWasm128UnitTests.cpp  QuaternionUnitTests.cpp  Vec2Avx2UnitTests.cpp  Vec2AvxUnitTests.cpp  Vec2Sse2UnitTests.cpp  Vec2Sse3UnitTests.cpp  Vec2Sse4UnitTests.cpp  Vec2UnitTests.cpp  Vec2UnitTests.h  Vec3UnitTests.cpp  Vec4Avx2UnitTests.cpp  Vec4AvxUnitTests.cpp  Vec4Sse2UnitTests.cpp  Vec4Sse3UnitTests.cpp  Vec4Sse4UnitTests.cpp  Vec4SseUnitTests.cpp  Vec4UnitTests.cpp  Vec4UnitTests.h  VecUnitTests.cpp  VectorUnitTests.cpp
Ark/cmake/toolchains/settings/: Darwin.cmake  Emscripten.cmake  Windows.cmake
Ark/cmake/toolchains/settings/Emscripten/: Emscripten-WebAssembly.cmake
Ark/cmake/toolchains/settings/Windows/: Windows-x86_64.cmake
Ark/cmake/toolchains/settings/macOS/: macOS-arm64.cmake
Docs/: Doxyfile
Docs/Content/: TemplateExpressionsAsClassParameters.dox
Docs/Content/Pages/: ExpressionTemplates.dox  SimdArchitecture.dox
Docs/Content/Snippets/: ConstraintExpr.cpp  CrtpExpr.cpp  Emscripten-concpet-aimbiguous-overload.txt  Supported-SIMD-ISAs.txt
Docs/Content/Snippets/Math/Matrix/: MatrixAssignment.txt
Docs/Content/Snippets/Math/Quaternion/: Addition.f  Addition.txt  AdditionOperation.f  BinaryParameterConceptDetails.txt  Conjugation.f  Conjugation.txt  ConjugationOperation.f  Division.f  Division.txt  DotProduct.f  DotProduct.txt  DotProductOperation.f  Equality.f  Equality.txt  Inversion.f  Inversion.txt  InversionOperation.f  Multiplication.f  Multiplication.txt  MultiplicationOperation.f  Negation.f  Negation.txt  NegationOperation.f  Norm.f  Norm.txt  Q.f  Q1.f  Q2.f  QuaternionScalarDivisionOperation.f  QuaternionScalarMultiplication.f  QuaternionScalarMultiplication.txt  QuaternionScalarMultiplicationOperation.f  SampleExpressions.txt  ScalarDivision.f  ScalarDivision.txt  ScalarQuaternionMultiplication.f  ScalarQuaternionMultiplication.txt  ScalarQuaternionMultiplicationOperation.f  Subtraction.f  Subtraction.txt  (+2 more)
Docs/Content/Snippets/Math/Vector/: Addition.f  Addition.txt  Addition2D.f  Addition2D.txt  Addition4D.f  Addition4D.txt  CrossProduct2D.f  CrossProduct2D.txt  CrossProduct3D.f  CrossProduct3D.txt  CrossProduct4D.txt  DefaultConstructor.txt  DotProduct.f  DotProduct.txt  DotProduct2D.f  DotProduct2D.txt  DotProduct4D.f  DotProduct4D.txt  Equality.f  Equality.txt  Equality2D.f  Equality2D.txt  Equality4D.f  Equality4D.txt  GenericDefaultConstructor.txt  Negation.f  Negation.txt  Negation2D.f  Negation2D.txt  Negation4D.f  Negation4D.txt  Norm.f  Norm.txt  ParameterConcept.txt  ScalarConstructor.txt  ScalarDivision.f  ScalarDivision.txt  ScalarDivision2D.f  ScalarDivision2D.txt  ScalarDivision4D.f  (+35 more)
Docs/Content/Snippets/Test/: ParameterizedSuitTypesBrief.txt  ParameterizedSuitTypesDetails.txt  ParameterizedSuiteClass.txt  ParameterizedSuiteNamespace.txt
